# MobulaAUVWorkspace

./: .codexignore  .gitignore  AGENTS.md  Battery_Node.md  README-EASY.md  README-mediamtx-pi.md  README.md  apt_package_list.txt  notes on IMU Node.md  pip_requirements.txt  pressure_sensor_test.py  servo_test.py  setup_mediamtx_pi.sh  update_package_lists.sh
Library Requirement/: Requirements.md
Nodes Descriptions/: acceleration_node.md  battery_node.md  console_bridge_node.md  depth_node.md  imu_node.md  mission_manager_node.md  pitch_pid.md  roll_pid.md  servo_driver.md  servo_interpolation.md  system_monitor_node.md
src/auv_custom_interfaces/: CMakeLists.txt
src/auv_custom_interfaces/msg/: HoldRequest.msg  ServoMovementCommand.msg  SystemHealth.msg
src/auv_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/auv_pkg/auv_pkg/: Depth_bu  ImuBackup-minimum.py  __init__.py  acceleration_node.py  acceleration_node_bu  battery_node.py  camera_control.py  clipboard.py  console_bridge_node.py  depth_node.py  fix_imu_node.py  imu-backup-old  imu_firstAUV.py  imu_node.py  imu_node_BU  interpolator_BU  keyboard_control.py  keyboard_control_swim.py  mission_manager_node.py  pastebin.py  pitch_pid.py  pitchpidbackup.py  roll_pid.py  roll_pid_bu  roll_pid_original_bu.py  servo_driver.py  servo_driver_BU  servo_interpolation.py  servo_interpolator_bu  system_monitor_node.py  utils.py
src/auv_sim/: README.md  package.xml  setup.cfg  setup.py
src/mobula_auv_description/: CMakeLists.txt  package.xml
src/mobula_bringup/: CMakeLists.txt  package.xml
(+33 files in other folders)
